addressed all but one of Dom's comments

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -79,8 +79,7 @@ Link\"{o}ping, Sweden\\
 
 
 \begin{floatbox}{}
-% DG : I wonder if a paragraph summarizing the extent of the problem with the salix data should not be provided here. Either within the text, or a box. But we need to convingly show how large is this problem even for such an extensive dataset
-% AC : I like the box idea. Since we refer to the Salix data throughout the manuscript it makes sense to make it stand out. 
+
 [[I had understood that each of the 374 sites was a sample - should we switch to 641 as the maximum sites?]]
     \indent As a case study, we use an extensively sampled \emph{Salix}-galler-natural enemy meta-network. This dataset consists of a single community type sampled across Europe; willow (\emph{Salix}) species, willow-galling sawflies, and their natural enemies. The data were collected over 29 years at 374 unique locations across Europe, with a total of 641 site visits. Each site visit can be considered as a network in its own right and an independent sample from which to build the meta-network. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes. The high spatiotemporal resolution of this network and the unusually high sampling effort implemented at the site level makes this dataset particularly well suited for illustrating the difficulties in completely sampling a network and testing Bayesian approaches to overcome these difficulties.
     \indent We may begin by comparing the frequency of of co-occurence of taxa to reveal the challenge of having sufficient sampling to be confident that an interaction does not occur. Most pairs of species (3986/4992 \emph{Salix}-galler pairs and  9794/12096 galler-natural enemy pairs) are never found co-occurring, and for species that did occur the number of co-occurrences was generally low (mean=4.24, var=36.3 for \emph{Salix}-galler pairs; mean=3.87, var=28.8 for galler-natural enemy pairs; Fig.~\ref{histograms}A-B). For those species which interacted when co-occurring, the incidence of interaction was also low (mean=12.0, var=155 for \emph{Salix}-galler pairs; mean=4.04, var=29.3 for galler-natural enemy pairs; Fig.~\ref{histograms}C-D). Only 2.82\% of \emph{Salix}-galler pairs and 7.76\% of galler-natural enemy pairs were observed interacting at all. Thus, even in the most extensive data set that we could find, limited sampling is clearly a major source of uncertainty. This dataset also illustrates the potential for increased sampling to not necessarily reveal more interactions as a pair of species that interacts in some cases may not be observed interacting in all cases (Fig.~\ref{histograms}E-F). 
@@ -137,23 +136,22 @@ Link\"{o}ping, Sweden\\
   The basic information that we are collecting consists of matrices of interaction partners. Our count of interactions between two species reflects uncertainty with respect to whether two species are capable of interacting when co-occurring at a given site ($\lambda$), chance variation in whether the interaction is realised ($\chi$),  and uncertainty with respect to whether it is detected when realised ($\delta$). In this case, what can we do to pin down any of these different types of variation?
 
 % DG: it's bizarre to present here the outcome of the naive binomial formulation, while the reasoning is provided later. My solution is to move the following section on the binomial model along with the figure within a box. It's not central, but formalizes the problem. It would respect the order of appearance and better emphasize the bayes section.
+% AC: I couldn't figure out how to put a figure inside a text box, so instead (following an e-mail suggestion) I moved the naive binomial outcome to the figure caption.
 
-  A simple example will illustrate the problem (the full reasoning is provided below): assume that we want to infer the probability of an interaction between two species, A and B. Now assume that in reality, interaction between A and B is completely impossible (i.e. the true $\lambda=0$), but the observer does not know this and seeks to estimate this interaction probability ($\lambda$). The record of the number of observed interactions will follow a binomial distribution, with number of trials $k$ and number of observations $n$, for which we can compute the confidence interval of the estimated probability $\lambda$. Given no added detection error in observing the incidence of the interaction, then a single observation of species co-occurrence will reveal very little regarding the probability of the interaction – the confidence limits for one observation essentially spans from 0 to 1 (Fig.~\ref{upper_limits} - using Clopper-Pearson's true confidence interval). For 5 observations, this confidence limit still extends to 0.5. Only with thirty observations will it shrink to 0.1. Thus, adding m ore observations is certainly useful in controlling uncertainty due to stochasticity inherent in the process itself, but the number of observations nonetheless needs to be very high. 
-
-  \begin{figure}
-    \caption{This figure illustrates the upper bound (solid black line) of a 95\% confidence interval for the interaction probability $\lambda$ when there is no observation of an interaction ($k = 0$) and $n$ observations of the two species co-occurring at a given location. The confidence interval is based on the Clopper-Pearson derivation from the beta distribution. A threshold interaction probability of 0.1 is indicated by the dotted red line.}
+  \begin{figure}[h!]
+    \caption{A simple example will illustrate the problem of imperfect detection of interactions (the full reasoning is provided below). Assume that we want to infer the probability of an interaction between two species, A and B. Now assume that in reality, interaction between A and B is completely impossible (i.e. the true $\lambda=0$), but the observer does not know this and seeks to estimate this interaction probability ($\lambda$). The record of the number of observed interactions will follow a binomial distribution, with number of interactions $k$ and number of observations $n$, for which we can compute the confidence interval of the estimated probability $\lambda$. Given no added detection error in observing the incidence of the interaction, then a single observation of species co-occurrence will reveal very little regarding the probability of the interaction – the confidence limits for one observation essentially spans from 0 to 1. Only with thirty observations will it shrink to 0.1. Thus, adding more observations is certainly useful in controlling uncertainty due to stochasticity inherent in the process itself, but the number of observations nonetheless needs to be very high. Here we show the upper bound (solid black line) of a 95\% Clopper-Pearson true confidence interval for $\lambda$ when $k=0$ (A and B have not been observed interacting) for a variety of $n$ (observed co-occurences of A and B). A threshold interaction probability of 0.1 is indicated by the dotted red line.    }
     \label{upper_limits}
     \includegraphics*[width=.8\textwidth]{figures/upper_limit_DG.eps}
   \end{figure}
 
 
-  The obvious rule of thumb derived from the above example is ``sample more", but we note that there are limits to the utility of this motto. Sampling more will clearly reduce uncertainty regarding the upper bound of the probability of interaction, and it will also increase the probability of detecting unlikely interactions (i.e. interactions occurring with a low probability). Yet, since the probability of observing the co-occurrence of two species will always be higher than the probability of observing their interaction (since the probability of interaction is conditional on both interaction partners being present; see Fig.~\ref{histograms}E-F), we will accumulate observations of co-occurrences faster than we will accumulate observations of interactions. Thus, the more we sample, the more zeros will appear in our interaction matrix, which may seem like a counter-intuitive outcome. 
+  The obvious rule of thumb is to ``sample more" (see Fig.~\ref{upper_limits} for a demonstration of the power of increasing sample size), but we note that there are limits to the utility of this motto. Sampling more will clearly reduce uncertainty regarding the upper bound of the probability of interaction, and it will also increase the probability of detecting unlikely interactions (i.e. interactions occurring with a low probability). Yet, since the probability of observing the co-occurrence of two species will always be higher than the probability of observing their interaction (since the probability of interaction is conditional on both interaction partners being present; see Fig.~\ref{histograms}E-F), we will accumulate observations of co-occurrences faster than we will accumulate observations of interactions. Thus, the more we sample, the more zeros will appear in our interaction matrix, which may seem like a counter-intuitive outcome. 
 
 
   As a solution towards deciding whether unobserved interactions were undetected due to sampling, or whether they truly do not occur,~\citet{Weinstein2017} used repeated sampling rounds to estimate the daily probability of detecting a hummingbird interaction, and to thereby model the observation and process mechanisms. While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (e.g., associations between hosts and parasitoids with a single generation per year), or very rare interactions which might not occur on any of the sampling days or might involve individuals of a species that are not under observation. What is worse, the problem persists that if a given interaction is not observed on a given day, this could be either because it was impossible that day despite being otherwise feasible [$P(X|D=1,L=1)=0$], because interaction between the two did occur but could not be observed [$P(D|X=1,L=1)=0$], or from any combination of the two. From a conceptual perspective, this approach will thus fail to satisfactorily distinguish between sources of uncertainty. Most importantly, if two species are never observed co-occurring during several days of sampling then we have learned nothing about their probability of interacting if they should ever co-occur. In other words, there is no information about interactions without co-occurrence.
 
 
-  An added complication is that not all sources of uncertainty are proportional to sample size. To record an interaction between A and B, we need to identify both partners correctly (a non-trivial problem in many food webs; e.g.~\citealp{Kaartinen2011,Roslin2016}) and be able to resolve all interactions with a similar likelihood. For both molecular and rearing techniques, certain types of interactions may go unnoticed due to technical challenges~\citep{Wirta2016}. This can bias the set of recorded interactions. The bottom line is that separating different sources of uncertainty is difficult indeed. As an alternative to abandoning empirical networks or continuing to ignore the uncertainty inherent in undetected observations, we propose that some insight regarding the detectability of interactions between species not found co-occurring may be gained from data on other species between which interactions are known to be feasible. 
+  An added complication is that not all sources of uncertainty are proportional to sample size. To record an interaction between A and B, we need to identify both partners correctly (a non-trivial problem in many food webs; e.g.~\citealp{Kaartinen2011,Roslin2016}) and be able to resolve all interactions with a similar likelihood. For both molecular and rearing techniques, certain types of interactions may go unnoticed due to technical challenges~\citep{Wirta2014}. This can bias the set of recorded interactions. The bottom line is that separating different sources of uncertainty is difficult indeed. As an alternative to abandoning empirical networks or continuing to ignore the uncertainty inherent in undetected observations, we propose that some insight regarding the detectability of interactions between species not found co-occurring may be gained from data on other species between which interactions are known to be feasible. 
 
   % [[How do we define samples? For the Kopelke set we use sampling occasion, but what about sampling twice as many trees on the same day and same place? Does that count? Does it have to be spatially and/or temporally separated? Is it relevant??]]
   % [[Pretty sure this will always depend on the study - also seems like a pretty large digression.]]
@@ -185,15 +183,12 @@ Link\"{o}ping, Sweden\\
         \label{theta_MLE}
       \end{equation}
 
-  The variance of a Bernoulli experiment is $n\lambda$(1-$\lambda$). It is important to remember that this variance describes the variability of the number of successes $k$ for $n$ trials and is not the variance associated with the estimation of $\lambda$. Given this variance, it is possible to compute the confidence interval for the MLE of $\lambda$ using any of several methods, including the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull Interval} (for details, see [\citealp{}]). Finding this estimate is therefore quite straightforward, but it nonetheless has two drawbacks. First, $\lambda$ is not a single point estimate but rather a random variable with a given uncertainty, the distribution of which is unknown. This means that even if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. What it implies is that no interaction is the most likely situation but there is nonetheless a substantial chance that the two species \emph{could} interact. In contrast with the situation where $k>0$, when we are sure that an interaction is feasible, we are not sure that absence of interactions is caused by $L=0$. Second, and most importantly, the number of trials $n$ might be very low in many instances (and some pairs of species might not have been documented as co-occuring even once). Consequently, the uncertainty in the estimation of $\lambda$ might be considerable. In Fig.~\ref{upper_limits}, we derive the Clopper-Pearson interval to explore how the estimate of $\lambda$ varies with sample size. At a small sample size, the 95\% confidence interval spans all values of $\lambda$. To establish that species are not interacting with any acceptable certainty requires tens of observations of the two species co-occurring but not interacting. As most data sets will not have such extensive sampling across all observations, we can use a Bayesian approach to supplement what data we do have with other sources of information.
+  The variance of a Bernoulli experiment is $n\lambda$(1-$\lambda$). It is important to remember that this variance describes the variability of the number of successes $k$ for $n$ trials and is not the variance associated with the estimation of $\lambda$. Given this variance, it is possible to compute the confidence interval for the MLE of $\lambda$ using any of several methods, including the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull Interval} (for details, see [\citealp{}]). Finding this estimate is therefore quite straightforward, but it nonetheless has two drawbacks. First, $\lambda$ is not a single point estimate but rather a random variable with a given uncertainty, the distribution of which is unknown. This means that even if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. What it implies is that no interaction is the most likely situation but there is nonetheless a substantial chance that the two species \emph{could} interact. In contrast with the situation where $k>0$, when we are sure that an interaction is feasible, we are not sure that absence of interactions is caused by $L=0$. Second, and most importantly, the number of trials $n$ might be very low in many instances (and some pairs of species might not have been documented as co-occuring even once). Consequently, the uncertainty in the estimation of $\lambda$ might be considerable. In Fig.~\ref{upper_limits} and Box~\ref{box2}, we derive the Clopper-Pearson interval to explore how the estimate of $\lambda$ varies with sample size. At a small sample size, the 95\% confidence interval spans all values of $\lambda$. To establish that species are not interacting with any acceptable certainty requires tens of observations of the two species co-occurring but not interacting. As most data sets will not have such extensive sampling across all observations, we can use a Bayesian approach to supplement what data we do have with other sources of information.
 
 
 \section*{Bayesian approach to infer interaction probabilities}
 
     \subsection*{Posterior distribution of the interaction probability}
-
-    %DG: note that I replaced theta by lambda to follow the above definitions. Need to make sure it's done throughout
-    %DG: I realize there is an X in here that should be removed as well to avoid confusion with the above nomenclature
 
       We here adopt a Bayesian approach to estimate the distribution of the parameter $\lambda$. According to Bayes principle, the posterior distribution of $\lambda$ is:
 
@@ -298,11 +293,6 @@ Link\"{o}ping, Sweden\\
 
       \subsubsection*{Degree distribution or interaction probabilities}
 
-          % [[Should we still have this? At the workshop we talked about how interaction probabilities depend on the degrees of both species and so I'm using predicted interaction probabilities (degreeA*degreeB) in the galler example. A writeup for that process follows the original text:]]
-
-%DG: I think so, it is a very useful proposition in the paper to increasingly improve the quality of the prior. I just tried to cut it down in order to follow the above layout. 
-%DG: actually, once I got down to the following section, I realized that the example is based on the degree distribution, so there is not much choice to keep it
-
           The degree of a node in a network is defined as the number of interactions it has to other nodes. The degree distribution of a network is then the probability distribution of these degrees over the whole network and the standardised degree could therefore be interpreted as an interaction probability. It is consequently possible to use the degree distribution to inform the prior distribution. The degree distribution could come from several networks, from a similar network (e.g. a known network at slightly different location) or from the network of interest if interaction probabilities for some species are already documented. The latter approach allows us to apply information from known, abundant species to the rarest species for which interactions are less frequently documented. 
 
           If our focal network describes a similar system to that in a known network, we can use the distribution of interaction probabilities in that network to inform our prior. The probability of any interaction $L_ij$ depends on the degrees of species $i$ and $j$. Using normalised degrees $\Delta_i$ and $\Delta_j$ (i.e., degrees divided by the number of species in the network), we can obtain the probability of interaction $L_ij$=$\Delta_i\times\Delta_j$. Similar to the procedure for degree distribution, the distribution of these interaction probabilities derived from a similar network or a suite of networks can be used to establish a prior distribution before any data from the focal network are collected. For distributions of either degrees or interaction probabilities, the procedure for the estimation of the hyper parameters follows the same approach as described above for connectance except that each measurement is at the individual interaction level instead of the network level.
@@ -320,13 +310,8 @@ Link\"{o}ping, Sweden\\
 
 \section*{A quantitative example}
 
-  %Perhaps we want to also have a trait matching example in addition to the degree distribution example below?
-%DG: that would be great, but I think it will be simply too much and too mathy. 
-
-  % Are degree distributions valid priors for interaction probabilities in a unipartite web? For the Salix-gall dataset we're using interaction probabilities as priors (since the degree of both Salix and galler matter)... maybe we should rephrase this to predict the degree of species $i$ based on the degrees of 10 other species in the network?
   The Bayesian framework can be illustrated with a simple quantitative example. Suppose we have $n = 10$ observations of co-occurrence between species $i$ and species $j$ in a given time interval and area, and $k = 3$ observations of interactions. The maximum likelihood estimate of the interaction probability (Box 1) is simply $\lambda_{MLE} = 3/10 = 0.3$. 
   
-%DG: the following example should provide first the real degree, and below the normalized degree. We need to help the reader translating degrees into interaction probabilities
 
   Now consider we know that species $i$ is known to interact with 10 species (other than species $j$), which have the following degrees:
 
@@ -353,7 +338,7 @@ Link\"{o}ping, Sweden\\
 
     The mean of these interaction probabilities is 0.176, approximately two-thirds the $\lambda_{MLE}$ obtained from the observed data. We can use the distribution of these interaction probabilities as our prior distribution and estimate the uncertainty surrounding our $\lambda_{MLE}$. With some simple R code (function ``calculate\_parameters", \emph{Appendix S2}), we obtain prior parameters $\alpha$=0.998 and $\beta$=4.63. Using these priors in equations~\ref{mean} and~\ref{variance} above (or in the R function ``calculate\_distribution" in \emph{Appendix S2}), we find a prior $\bar\lambda$=0.177 and var($\lambda$)=0.026. Adding the observed data ($n=10$, $k=3$) and using the same code, we obtain posterior parameters $\alpha'$=4.00 and $\beta'$=11.6 and a posterior $\bar\lambda$=0.256 and var($\lambda$)=0.012. Comparing the posterior distribution to the prior, we see that the posterior is closer to the observed data and that the additional data has reduced the variance. We may also wish to calculate a credible interval (analogous to the frequentist confidence interval). This is also quite straightforward in R (see function ``credible\_interval" in \emph{Appendix S2}). In this case, a 95\% credible interval for $\bar\lambda$ is (0.080, 0.491).
 
-    Now, consider the case where the two species have never been observed interacting across $n$ trials, i-e. $k=0$. The question is then ``what is the probability these two species do not interact''? Since it is not possible to prove that the two species could never interact (strickly speaking, in this approach $\lambda=0$ is impossible), given the framework above we must fix a threshold below which we consider that there is no interaction ($\lambda \sim 0$). We call this threshold probability $\lambda*$. We then use the cumulative distribution function to estimate $P(\lambda<\lambda*|L=0,n)$ for different $n$. The function ``plot\_precision" in \emph{Appendix S2} calculates distribution function for $\lambda*$ with an increasing number of trials. This yields a surprising result: it requires \textgreater24 observations of no interactions to be 95\% sure that the interaction probability is smaller than $\lambda*$=0.1 (recall Fig.~\ref{upper_limits}). Note the special case where there is no observation of the two species co-occurring, $n = 0$.  In this situation, the posterior distribution converges to the prior distribution since the data include no information on the probability with which species might interact should they co-occur).
+    Now, consider the case where the two species have never been observed interacting across $n$ trials, i-e. $k=0$. The question is then ``what is the probability these two species do not interact''? Since it is not possible to prove that the two species could never interact (strickly speaking, in this approach $\lambda=0$ is impossible), given the framework above we must fix a threshold below which we consider that there is no interaction ($\lambda \sim 0$). We call this threshold probability $\lambda*$. We then use the cumulative distribution function to estimate $P(\lambda<\lambda*|L=0,n)$ for different $n$. The function ``plot\_precision" in \emph{Appendix S2} calculates distribution function for $\lambda*$ with an increasing number of trials. This yields a surprising result: it requires \textgreater24 observations of no interactions to be 95\% sure that the interaction probability is smaller than $\lambda*$=0.1 (recall Fig.~\ref{upper_limits}, Box~\ref{box2}). Note the special case where there is no observation of the two species co-occurring, $n = 0$.  In this situation, the posterior distribution converges to the prior distribution since the data include no information on the probability with which species might interact should they co-occur).
 
 
 \section*{Scaling up uncertainty from pairwise interactions to networks}
@@ -434,15 +419,15 @@ Link\"{o}ping, Sweden\\
 
   \subsection*{Scaling up to network metrics}
 
-    Using the prior distributions and procedures described above, we calculated posterior probability distributions for \emph{Salix}-galler or galler-natural ememy pair that was not observed interacting. Using these posterior distributions and assuming probabilities of 1 for pairs of species that were observed interacting, we created a suite of 100 webs of each network type by randomly sampling from each posterior distribution. After obtaining these posterior networks, we calculated the connectance of each web, as well as the number of links per resource (\emph{Salix} in the \emph{Salix}-galler networks or galler in the galler-natural enemy networks) and links per consumer. To demonstrate how these network metrics will be affected by detection uncertainty ($\delta$), we then created a suite of filtered networks for each posterior network. Networks were filtered by randomly sampling 99\%, 95\%, 90\%, 80\%, 70\&, 60\%, and 50\% of the interactions included in each posterior network. This gradient is akin to a gradient of sampling effort. For each level of detection accuracy, we created 100 randomly-sampled networks per posterior-probability network. We then calculated the same network properties as described above.
+    Using the prior distributions and procedures described above, we calculated posterior probability distributions for \emph{Salix}-galler or galler-natural ememy pair that was not observed interacting. Using these posterior distributions and assuming probabilities of 1 for pairs of species that were observed interacting, we created a suite of 100 webs of each network type by randomly sampling from each posterior distribution. After obtaining these posterior networks, we calculated the connectance of each web, as well as the number of links per resource (\emph{Salix} in the \emph{Salix}-galler networks or galler in the galler-natural enemy networks) and links per consumer. To demonstrate how these network metrics will be affected by detection uncertainty, we then created a suite of filtered networks for each posterior network. Networks were filtered by randomly sampling 99\%, 95\%, 90\%, 80\%, 70\%, 60\%, and 50\% of the interactions included in each posterior network. This gradient is akin to a gradient of sampling effort. For each level of detection accuracy, we created 100 randomly-sampled networks per posterior-probability network (giving 100 posterior networks and 1000 detection-filtered networks each for the \emph{Salix}-galler and galler-natural enemy networks). We then calculated the same network properties as described above.
 
 %DG: the different posterior connectance are the results of different samples of the posterior distribution, righ ? 
 %Yes
 
-    We find, not surprisingly, that the posterior webs for the Salix-galler network all had much higher connectance than the original, observed web (C=0.028 for the observed web, Fig.~\ref{posterior_webs}). Likewise, the number of links per \emph{Salix} and galler species in the observed web (2.71 and 1.47, respectively) were much lower than those predicted in the posterior webs, even when filtering with a detection probability of only 50\%. There are two possible explanations for this discrepancy: either the~\citet{Barbour2016} data do not give an appropriate prior for our dataset, or the true detection probability for links between \emph{Salix} and galler species is much less than 50\%. As the scale of the two datasets is quite different (genotypes of a single \emph{Salix} species in~\citet{Barbour2016}, various \emph{Salix} species in our dataset), we suspect the former is more likely.
+    We find, not surprisingly, that the posterior webs for the Salix-galler network all had much higher connectance than the original, observed web (C=0.028 for the observed web and 0.528$\leq$C$\leq$0.568 for the posterior webs; Fig.~\ref{posterior_webs}A). Likewise, the number of links per \emph{Salix} and galler species in the observed web ($L_{\emph{Salix}}$=2.71 and $L_{galler}$=1.47, respectively) were much lower than those predicted in the posterior webs (27.4$\leq L_{\emph{Salix}} \leq$29.5 and 50.6$\leq L_{galler} \leq $54.5, respectively; Fig.~\ref{posterior_webs}C,E), even when filtering with a detection probability of only 50\%. There are two possible explanations for this discrepancy: either the~\citet{Barbour2016} data do not give an appropriate prior for our dataset, or the true detection probability for links between \emph{Salix} and galler species is much less than 50\%. As the scale of the two datasets is quite different (genotypes of a single \emph{Salix} species in~\citet{Barbour2016}, various \emph{Salix} species in our dataset), we suspect the former is more likely.
 
 
-    Considering the galler-natural enemy networks, the connectance, mean links per galler, and mean links per natural enemy (0.078, 9.99, and 7.45, respectively) are similar to those in the posterior webs with a detection filter of 50\% (Fig.~\ref{posterior_webs}). The~\citet{Barbour2016} network likely provides a better prior here than for the \emph{Salix}-galler networks, as both networks included different galler and natural enemy species. Although the two networks differ vastly in scale, and the inclusion of multiple \emph{Salix} species likely causes structural differences from~\citet{Barbour2016} despite the similar resolution of gallers and natural enemies, this result nevertheless suggests that even such a large and well-replicated network is missing a large proportion of interactions. This should be a strong warning to researchers comparing structural characteristics between networks - small structural differences are very likely to be completely masked by structural changes that would result if missing interactions were included.
+    Considering the galler-natural enemy networks, the connectance, mean links per galler, and mean links per natural enemy were also much lower in the observed web (C=0.078, $L_{galler}$=9.99, and $L_{natural enemy}$=7.45, respectively) than in the posterior webs (0.183$\leq$ C $\leq$ 0.196, 17.5 $\leq L_{galler} \leq$ 18.9, and 23.0 $\leq L_{natural enemy} \leq$ 24.8). When the detection probability was relatively low (i.e., 50\%), however, the properties of randomised networks became similar to those in the observed webs (Fig.~\ref{posterior_webs}B,D,F). The~\citet{Barbour2016} network likely provides a better prior here than for the \emph{Salix}-galler networks, as both networks included different galler and natural enemy species. Although the two networks differ vastly in scale, and the inclusion of multiple \emph{Salix} species likely causes structural differences from~\citet{Barbour2016} despite the similar resolution of gallers and natural enemies, this result nevertheless suggests that even such a large and well-replicated network as that in~\citet{Kopelke2017} is missing many interactions. This should be a strong warning to researchers comparing structural characteristics between networks - small structural differences are very likely to be completely masked by structural changes that would result if missing interactions were included.
 
 
     \begin{figure}[ht]
@@ -454,6 +439,9 @@ Link\"{o}ping, Sweden\\
   % [[What if we have only one site? Can we use the number of observations of a pair of species interacting with any partners as the number of times they co-occur, and the number of interactions within the pair as k? This will be sort-of valid for insects but not for plants when researchers camp out by plant individuals... ]]
 
 \section*{Conclusions/recommendations}
+
+  
+
 
   [Here we need to be very hands-on and remember the invitation letter form Ecol Letters:
   As a contribution primarily to methodology, the manuscript will not be considered for ``Ideas \& Perspectives". (Please recall my message concerning your past presubmission inquiry.) However, Ecology Letters is entertaining the idea of a new section for ``Novel Methods". As we have not advertised this, I would ask you to keep that information in confidence. If acceptable to an Associate Editor and reviewers, your paper could be the first, or one of the first, contributions to this new section. Accordingly, the work would be subject to considerable scrutiny and I would urge you to make the paper as strong as you can. This would include demonstrating the need for this new method (i.e. outlining how this is different than other approaches currently in use and how they fail at some important task), documenting the robustness and accuracy of the approach, performing case study, and making robust high-quality code freely available.]
