fixed the Frost ref

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -100,7 +100,7 @@ Link\"{o}ping, Sweden\\
 
     \subsection*{Detection uncertainty} 
 
-    Lastly, measurement errors are always a source of uncertainty in the observation of ecological processes. We define the detection of an interaction with the variable $D$, given an interaction is feasible and occurs in the local conditions, as a stochastic process with associated probability $P(D|X,L)=\delta$. Detection failure could happen for several reasons, for instance if the rearing of a parasitoid fails with inappropriate lab conditions, because of species mis-identification, or because the interaction is very rare (see~\citet{Wirta2014,FrostXX} for examples of some of these difficulties and partial solutions to them). Some sources of detection error could be minimised with appropriate sampling effort ($\delta$ will converge to one with increasing number of samples), but other sources are often difficult to reduce (e.g. the occurrence of cryptic species might require molecular analysis for appropriate taxonomic identification as in~\citet{Wirta2014,FrostXX}).
+    Lastly, measurement errors are always a source of uncertainty in the observation of ecological processes. We define the detection of an interaction with the variable $D$, given an interaction is feasible and occurs in the local conditions, as a stochastic process with associated probability $P(D|X,L)=\delta$. Detection failure could happen for several reasons, for instance if the rearing of a parasitoid fails with inappropriate lab conditions, because of species mis-identification, or because the interaction is very rare (see~\citet{Wirta2014} for examples of some of these difficulties and partial solutions to them). Some sources of detection error could be minimised with appropriate sampling effort ($\delta$ will converge to one with increasing number of samples), but other sources are often difficult to reduce (e.g. the occurrence of cryptic species might require molecular analysis for appropriate taxonomic identification as in~\citet{Wirta2014,Frost2016}).
 
 
     % \subsection*{What is an observation of "no interaction"?} 
