--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -429,7 +429,7 @@ Link\"{o}ping, Sweden\\
 
 
 %DG :  I think we should add the MLE estimate along with the binomial confidence interval on the figure in order to better illustrate the impact of the prior (obviously only for one N). You may draw it with a line to contrast with polygons.
-% I can add those along the top, maybe even for a couple of N. 
+% Done, think it works for all N
 
 %DG: otherwise the difference between the two interaction types is very interesting and useful to show the effect of the priors. Bravo ! 
       \begin{figure}[ht]
